Version 1.0.349 Released April 27, 2012

    - Fixed issue with circular autowiring dependencies that include the
      SpringContextApplication bean; this also eliminates the requirement
      to create custom static get() method in subclass (issue #7)
    - Removed deprecated ContextApplicationFactoryBean
    - Added @PostCompletionSupport Spring annotation
    - Added SpringXSLPersistentObjectSchemaUpdate.setTransformerFactory()
    - Added support for "empty stops" in PersistentObject
    - Fix possible ClassCastException in JiBXUtil.readObject()
    - Fix bug in PersistentObject when numBackups == 1
    - Added some enhancements to PropertyDef
    - Added AbstractConfiguredBean

Version 1.0.315 Released March 26, 2012

    - Added CSVWriter
    - Added ContextApplication.invokeLater()
    - Catch all Exceptions in SpringDelegate to support "empty open"
    - Added to IdGenerator methods setId(), getObject(), and run(Callable)
    - Execute all JiBXUtil methods within an invocation of IdGenerator.run()
    - Added ParseUtil.(de)serializeReference() and ParseUtil.deserializeUUID()
    - Have IdMappingMarshaller implement Unmarshaller as well as Marshaller
    - Added JiBXUtil method variants that take a binding name parameter
    - Fixed access permission bug in PersistentObject constructor
    - Added Pattern validation constraint

Version 1.0.284 Released Feb 16, 2012

    - Added new DAO support classes
    - Added support for creating automatic backups to PersistentObject
    - Added ability to enable/disable PersistentObject "empty starts"
    - Put back UpdatingDataSource which got accidentally lost in r205
    - Fixed bug in SQLSchemaUpdater detecting initialized database
    - Added SpringContextApplication.destroySpringApplication() hook
    - Deprecated ContextApplicationFactoryBean
    - Added HardLink class

Version 1.0.263 Released Jan 30, 2012

    - Bug fixes and tweaks to PersistentObject classes